--- a/.htaccess
+++ b/.htaccess
@@ -2,5 +2,5 @@
    RewriteEngine on
    RewriteCond %{REQUEST_FILENAME} !-d
    RewriteCond %{REQUEST_FILENAME} !-f
-   RewriteRule ^(.*)$ hfw/hfw.php/$1 [PT,L]
+   RewriteRule ^(.*)$ index.php/$1 [PT,L]
 </IfModule>
